--- a/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/main.tex
+++ b/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/main.tex
@@ -33,6 +33,7 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
+\input{symbols_terms.tex}
 \input{input_event_models.tex}
 \input{output_event_models.tex}
 
