--- a/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/output_event_models.tex
+++ b/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/output_event_models.tex
@@ -379,7 +379,7 @@
 
 % \begin{frame}{}
 %     \begin{itemize}
-%         \item 周期的イベント (ジッタの有無にかかわらず) が確実に決定論的な振る舞いをするのに対し, 散発的イベントは一見不規則に到着する
+%         \item 周期的イベント (ジッタの有無に関わらず) が確実に決定論的な振る舞いをするのに対し, 散発的イベントは一見不規則に到着する
 %         \item 散発的なタスクアクティベーションモデルは, 例えば顧客からのサーバへの要求のような, 非決定 的なイベントソースの振る舞いをモデル化するのに強力であることが証明されている
 %         \item 詳細はすでに3.6節でレビューしている
 %         \item 本節では, 周期的ストリームの場合と同様に, 実行とスケジューリングが散発的イベントストリームの特性に及ぼす影響に焦点を当てる
@@ -661,7 +661,7 @@
 
 % \begin{frame}{}
 %     \begin{itemize}
-%         \item 散発的なアクティベーション (ジッタやバーストの有無にかかわらず) と条件付き出力生成の組み合わせは, 新しい出力モデルにつながらない
+%         \item 散発的なアクティベーション (ジッタやバーストの有無に関わらず) と条件付き出力生成の組み合わせは, 新しい出力モデルにつながらない
 %         \item あるコーナーケースでは, 周期的な入力と「常に出力」を仮定しなければならず, 周期的な出力につながる
 %         \item もう一つのケースでは, 入力がゼロ, すなわちタスクが実行されないか, 実行されても出力が得られないと仮定する
 %         \item 結果は同じで, 出力生成はゼロである
