--- a/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/symbols_terms.tex
+++ b/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/symbols_terms.tex
@@ -1,1 +1,23 @@
 % !TeX root = main.tex
+
+\begin{frame}{表記法・用語}
+\full{
+\begin{table}[tb]
+\adjustbox{max width=\textwidth, max height=\slideheight}{
+\centering\begin{tabular}{|c|l|} \hline
+    $\Delta t$ & 任意の時間間隔 \\\hline
+    $\eta^{+}(\Delta t)$ & 最大イベント到着関数 \\\hline
+    $T$ & 周期 \\\hline
+    $J$ & ジッタ \\\hline
+    $d^{-}$ & 最小到達間隔 \\\hline
+    $T^O$ & 外部周期 \\\hline
+    $T^I$ & 内部周期 \\\hline
+    $b$ & 1バースト内のイベントの最大数 \\\hline
+    % $R(i)$ & $\mathcal{T}_i$の応答時間  \\\hline
+    $R_i^+$ & $\mathcal{T}_i$の最悪応答時間 \\\hline
+    $R_i^-$ & $\mathcal{T}_i$の最良応答時間 \\\hline
+\end{tabular}
+}
+\end{table}
+}
+\end{frame}
