--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/capacity_augmentation_bound.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/capacity_augmentation_bound.tex
@@ -19,7 +19,7 @@
 \end{frame}
 
 \begin{frame}[label=theorem1]{並列タスクのためのキャパシティ拡張境界}
-    以下の定理より, コア数 $m$ が十分に大きい場合, フェデレートスケジューリングは最適なキャパシティ拡張境界を示す
+    以下のTheoremより, コア数 $m$ が十分に大きい場合, フェデレートスケジューリングは最適なキャパシティ拡張境界を示す
     \begin{theorem}[]
         $m$ コア上の並列タスクのための任意のスケジューラのキャパシティ拡張境界の下限は $2-\frac{1}{m}$
         \notes{証明略}
