--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/symbols_terms.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/symbols_terms.tex
@@ -8,8 +8,8 @@
                     $G(V, E)$                               & DAG                                      \\\hline
                     $V = \{\tau_1, \tau_2,
 ...  , \tau_{|V|}\}$ & タスクセット                             \\\hline
-                    $E$                                     & タスク間の優先順位制約                   \\\hline
-                    $e_{i,j} \in E$                         & $\tau_i, \tau_j$ 間の優先順位制約        \\\hline
+                    $E$                                     & タスク間の優先度制約                   \\\hline
+                    $e_{i,j} \in E$                         & $\tau_i, \tau_j$ 間の優先度制約        \\\hline
                     $data_{i,j}$                            & $\tau_i$から$\tau_j$に送信されるデータ量 \\\hline
                     $pred(\tau_j)$                          & $\tau_j$の直接先行タスク                 \\\hline
                     $succ(\tau_j)$                          & $\tau_j$の直接後続タスク                 \\\hline
