--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/the_proposed_schedulers.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/the_proposed_schedulers.tex
@@ -41,8 +41,8 @@
 \begin{frame}{ランク値の逆転への対策}
     \fitimage{
         \begin{itemize}
-            \item あるタスクのランク値が, そのタスクの後続ノードのランク値よりも小さくなると, 生成されたタスクリストで優先順位制約違反となってしまう
-            \item 以下の処理によって, 優先順位制約を保証する
+            \item あるタスクのランク値が, そのタスクの後続ノードのランク値よりも小さくなると, 生成されたタスクリストで優先度制約違反となってしまう
+            \item 以下の処理によって, 優先度制約を保証する
         \end{itemize}
     }{rank_recalc}
 \end{frame}
