--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/open_problems_and_pragmatic_workarounds.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/open_problems_and_pragmatic_workarounds.tex
@@ -48,7 +48,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item 第V章で述べたように, 有用な分析精度を得るためには, スカラーWCETモデルではなく, 実行時間曲線の使用が不可欠である
-        \item それにもかかわらず, 我々の実験では, 観測されたレイテンシと予測された境界の間に大きなギャップがあることに気づくことがあった
+        \item それにも関わらず, 我々の実験では, 観測されたレイテンシと予測された境界の間に大きなギャップがあることに気づくことがあった
     \end{itemize}
 \end{frame}
 
@@ -95,7 +95,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item ROS-Llamaは, Linuxのリアルタイム機能, 特にSCHED\_DEADLINE [8]から大きな恩恵を受けている
-        \item それにもかかわらず, ある種の問題は意外なほど困難でもありました
+        \item それにも関わらず, ある種の問題は意外なほど困難でもありました
     \end{itemize}
 \end{frame}
 
