--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/related_work.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/related_work.tex
@@ -63,7 +63,7 @@
         \begin{itemize}
             \item  最後に, リソース予約の最適なバジェットと期間を見つける問題は, 個々のタスク [12-15, 58-60] と DAG [61] の両方について, 広く研究されている
             \item しかし, ROS コールバックグラフには複雑な相互依存関係があるため, これらのアプローチを ROS に直接適用することはできない (セクション IV-C を思い出してください)
-            \item それにもかかわらず, ROS固有の課題に対処するためにそのようなアプローチを適応および拡張する将来の作業は, ROS-Llamaの現在のバジェットヒューリスティックに取って代わる可能性がある.
+            \item それにも関わらず, ROS固有の課題に対処するためにそのようなアプローチを適応および拡張する将来の作業は, ROS-Llamaの現在のバジェットヒューリスティックに取って代わる可能性がある.
         \end{itemize}
     \end{frame}
 
