--- a/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/introduction.tex
+++ b/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/introduction.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{背景}
     \begin{itemize}
-        \item 並列アプリケーションは, ノードがサブタスクとも呼ばれる逐次実行単位, エッジがサブタスク間の優先順位制約を表す有向非巡回グラフ (DAG) として自然にモデル化できる
+        \item 並列アプリケーションは, ノードがサブタスクとも呼ばれる逐次実行単位, エッジがサブタスク間の優先度制約を表す有向非巡回グラフ (DAG) として自然にモデル化できる
         \item 本論文では, 限定プリエンプティブ周期的DAGタスクモデルの動的スケジューリングを考える
         \item 動的スケジューリングでは, タイミング異常と呼ばれる応答時間の増加が発生する可能性がある
     \end{itemize}
