--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
@@ -126,7 +126,7 @@
     \begin{frame}{}
         \begin{itemize}
             \item 条件 $D_{i}-L_{i}<$  $D_{j}-L_{j}$ は必要なだけであり, 結果のパッシブ VP が $\tau_{j}$ にとって有用であるために十分ではないことに注意
-            \item それにもかかわらず, アクティブ VP で実行するために小さい $D_{i}-L_{i}$ を使用するタスクを選択することは, 逆の方法で実行するよりもパッシブ VP が役立つ可能性がはるかに高いため, 一般的には依然として良い戦略である
+            \item それにも関わらず, アクティブ VP で実行するために小さい $D_{i}-L_{i}$ を使用するタスクを選択することは, 逆の方法で実行するよりもパッシブ VP が役立つ可能性がはるかに高いため, 一般的には依然として良い戦略である
         \end{itemize}
     \end{frame}
 }
@@ -172,7 +172,7 @@
         \begin{itemize}
             \item 繰り返しになるが, アルゴリズム 1 の割り当て戦略は, 最適というよりは単なるヒューリスティックである
             \item セクション VIII で示されるように, アルゴリズム 1 を使用すると, 仮想連合アプローチはすでに既存の方法よりも大幅に優れている
-            \item それにもかかわらず, より洗練されたリソース割り当て戦略を使用して, 仮想フェデレーションスケジューリングアプローチのパフォーマンスをさらに改善する余地がある可能性がある
+            \item それにも関わらず, より洗練されたリソース割り当て戦略を使用して, 仮想フェデレーションスケジューリングアプローチのパフォーマンスをさらに改善する余地がある可能性がある
             \item これについては, 今後の作業で調査する
         \end{itemize}
     \end{frame}
