--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/real_time_support_for_multi_threaded_executors.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/real_time_support_for_multi_threaded_executors.tex
@@ -15,7 +15,7 @@
 %         \item 一般に, マルチスレッド化により, 複数のプロセッサを効果的に利用できるようになり, システムの同時実行性とスループットが向上する
 %         \item リアルタイムマルチスレッドの利点は, 自動運転車のコンテキストで実証されている [10]
 %         \item また, 図 3 に示すように, ROS 2 のデフォルトのマルチスレッドエグゼキュータは, シングルスレッドのエグゼキュータよりもレイテンシパフォーマンスが優れていることも確認した
-%         \item ROS 2 マルチスレッドエグゼキュータのこのような利点にもかかわらず,  $\operatorname{ROS} 2$ のマルチスレッドエグゼキュータのタイミング動作を分析および改善するための先行研究はない
+%         \item ROS 2 マルチスレッドエグゼキュータのこのような利点にも関わらず,  $\operatorname{ROS} 2$ のマルチスレッドエグゼキュータのタイミング動作を分析および改善するための先行研究はない
 %         \item したがって, このセクションでは,
 %     \end{itemize}
 % \end{frame}
