--- a/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
+++ b/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
@@ -39,7 +39,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item その重要性にもかかわらず, [6] の作業にはいくつかの問題がある
+        \item その重要性にも関わらず, [6] の作業にはいくつかの問題がある
         \item ROS2 エグゼキュータ上の処理チェーン ([6] ではサブチェーンと呼ばれる) の応答時間は, 楽観的 (境界は実際の最悪のケースよりも小さい可能性がある) と悲観的の両方である
         \item (一般に, 境界は実際の最悪のケースよりも不必要に大きくなる)
         \item これらの問題については, セクション IV で詳しく説明する
