--- a/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/system_model.tex
+++ b/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/system_model.tex
@@ -34,6 +34,6 @@
         \item チェーン内の各頂点は, コールバック (*1): を表す
         \item 処理チェーンは, 通常, システムタイマによってアクティベーションされたタイマコールバックで始まり, 複数のエグゼキュータにまたがる可能性があるいくつかのレギュラーコールバックが続きます
         \item 本論文では, 単一のエグゼキュータ上のチェーンにバインドされた応答時間を計算することに注意を限定する
-        \item それにもかかわらず, [6] と同じように, 構成パフォーマンス分析 (CPA) アプローチ [26]-[29] によって, 複数のエグゼキュータにまたがるチェーンのエンドツーエンドの応答時間分析に結果を簡単に拡張できる
+        \item それにも関わらず, [6] と同じように, 構成パフォーマンス分析 (CPA) アプローチ [26]-[29] によって, 複数のエグゼキュータにまたがるチェーンのエンドツーエンドの応答時間分析に結果を簡単に拡張できる
     \end{itemize}
 \end{frame}
