--- a/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/proposed_analysis.tex
+++ b/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/proposed_analysis.tex
@@ -86,7 +86,7 @@
     \fitimage{
         \begin{itemize}
             \item 各コアにおいて, $j$ 番目の周期の最後のタスクインスタンスから $(j+1)$ 番目の周期の最初のタスクインスタンスに向けられたエッジを追加する
-            \item これは, 同一コア上で実行される連続したインスタンス間に, タスク間通信がないにもかかわらず, バックログ依存性が存在するため
+            \item これは, 同一コア上で実行される連続したインスタンス間に, タスク間通信がないにも関わらず, バックログ依存性が存在するため
         \end{itemize}
     }{backlog}
 \end{frame}
