--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/introduction.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/introduction.tex
@@ -23,7 +23,7 @@
     \begin{itemize}
         \item 新しいフェデレートスケジューリング戦略を提案
         \item フェデレートスケジューリングのキャパシティ拡張境界が $2$ であることを証明
-        \item どのスケジューラも並列タスクに対して $2 - \frac{1}{m}$ の容量増大境界を提供できないことを証明
+        \item どのスケジューラも並列タスクに対して $2 - \frac{1}{m}$ のキャパシティ拡張境界を提供できないことを証明
         \begin{itemize}
             \item したがって, $m$ が十分に大きい場合, フェデレートスケジューリングより優れたキャパシティ拡張境界を持つスケジューラは存在しない
         \end{itemize}
