--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/abstract.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/abstract.tex
@@ -3,7 +3,7 @@
 \begin{frame}{提案の概要}
     \begin{itemize}
         \item 暗黙的デッドラインを持つ並列DAGタスクに対して, 新しいフェデレートスケジューリングを提案する
-        \item 以下3つの異なるリアルタイムスケジューリング戦略をの性能を分析する
+        \item 以下3つの異なるリアルタイムスケジューリング戦略の性能を分析する
         \begin{itemize}
             \item グローバルEDF
             \item グローバルRMS
@@ -14,7 +14,7 @@
 
 % \begin{frame}{提案の概要}
 %     \begin{itemize}
-%         \item この戦略では, 高稼働タスク (利用率 $\geq 1$ )にそれぞれ専用コアのセットを割り当て, 残りの低稼働タスクが残りのコアを共有する3つのスケジューラ全てについて, 容量増大境界を証明する
+%         \item この戦略では, 高稼働タスク (利用率 $\geq 1$ )にそれぞれ専用コアのセットを割り当て, 残りの低稼働タスクが残りのコアを共有する3つのスケジューラ全てについて, キャパシティ拡張境界を証明する
 %         \item 特に, 単位速度のコアにおいて, あるタスクセットの総利用率が最大 $m$ で, 各タスクのクリティカルパス長がそのデッドラインより小さい場合, フェデレートスケジューリングはそのタスクセットを速度 $m$ のコアに $2 ,  G-E D F$ でスケジュールでき, $G-R M$ では速度 $2+\sqrt{3} \approx 3.732$ でスケジュールできることを示す
 %         \item また, 高速化の下限を示し, フェデレートスケジューリングと $G-E D F$ では, $m$ が十分大きいときに下限が厳しくなることを示す
 %     \end{itemize}
