--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/conclusion.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/conclusion.tex
@@ -14,9 +14,9 @@
 % \begin{frame}{}
 %     \begin{itemize}
 %         \item 今後の課題として, いくつかの方向性がある
-%         \item G-RMの容量増大境界はタイトであることが知られていないG-RMの現在の下限は $2.668$ であり, DAG構造を持たない逐次散発的なリアルタイムタスクから継承されたものである[37]
+%         \item G-RMのキャパシティ拡張境界はタイトであることが知られていないG-RMの現在の下限は $2.668$ であり, DAG構造を持たない逐次散発的なリアルタイムタスクから継承されたものである[37]
 %         \item したがって, 下限を一致させるか, 上界を下げるか, 検討する価値がある
 %         \item また, あらゆるスケジューラの下限は $2-\frac{1}{m}$ であるので, この下限に達するスケジューラを設計することが可能かどうかを調査することは興味深いことであろう
-%         \item 最後に, 既知の容量増大境界の結果は全て暗黙的デッドラインタスクに限定されているので, 制約付きデッドラインタスクや任意デッドラインタスクに一般化したいと思いる
+%         \item 最後に, 既知のキャパシティ拡張境界の結果は全て暗黙的デッドラインタスクに限定されているので, 制約付きデッドラインタスクや任意デッドラインタスクに一般化したいと思いる
 %     \end{itemize}
 % \end{frame}
