--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -18,7 +18,7 @@
 \end{frame}
 
 \begin{frame}{リソースの予約に関する仮定}
-    本論文では, 予約サーバーが周期的リソースモデル~\cite{shin2003periodic}に準拠している, すなわち, 以下を仮定する
+    本論文では, 予約サーバが周期的リソースモデル~\cite{shin2003periodic}に準拠している, すなわち, 以下を仮定する
     \begin{enumerate}
         \item 各予約には暗黙的デッドラインがある
         \item 予約サーバ $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
