--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
@@ -13,7 +13,7 @@
 
 \begin{frame}{本論文の貢献}
     \begin{itemize}
-        \item ROS 2 "Crystal Clemmys" の動作を調査することにより, 自動エンドツーエンド分析ツールの理論的基礎を築く
+        \item ROS 2 ``Crystal Clemmys" の動作を調査することにより, 自動エンドツーエンド分析ツールの理論的基礎を築く
         \item Linux の SCHED\_DEADLINE などのリソース予約スケジューラの上で実行される ROS アプリケーションのモデルを提示し, 検証
         \item モデルに基づいて, ROS 環境の特殊性と工学的制約を考慮に入れた ROS 処理チェーンのエンドツーエンドの応答時間分析を開発
     \end{itemize}
