--- a/paper/x_resource_reservation/inbox.tex
+++ b/paper/x_resource_reservation/inbox.tex
@@ -44,7 +44,7 @@
 
 \begin{frame}{}
 \begin{itemize}
-\item EDFスケジューリング下で時間的保護を強制する簡単なカーネルメカニズムは, 6章 で説明するConstant Bandwidth Server (CBS) [AB98, AB04]である.しかし, 時間的保護を適切に実装するためには, 計算時間が可変の各タスクnは, バンド幅U.nを持つ専用のCBSによって処理され, USi以上の時間他のタスクに干渉しないようにする必要があります.図 9.16 は, 2 つのタスク (ti と r2) を帯域幅 USl = 0.15 と U "3 = 0.1 の 2 つの専用 CBS で処理し, 2 つのタスク群 (r3, r4) を帯域幅 C／.S3 = 0.25 の単一の CBS で処理, 3 つのハード周期タスク (r5, r6, r7) を実行時間が大きく変動しないのでサーバーを介在せずに EDF で直接スケジュールする例である.
+\item EDFスケジューリング下で時間的保護を強制する簡単なカーネルメカニズムは, 6章 で説明するConstant Bandwidth Server (CBS) [AB98, AB04]である.しかし, 時間的保護を適切に実装するためには, 計算時間が可変の各タスクnは, バンド幅U.nを持つ専用のCBSによって処理され, USi以上の時間他のタスクに干渉しないようにする必要があります.図 9.16 は, 2 つのタスク (ti と r2) を帯域幅 USl = 0.15 と U "3 = 0.1 の 2 つの専用 CBS で処理し, 2 つのタスク群 (r3, r4) を帯域幅 C／.S3 = 0.25 の単一の CBS で処理, 3 つのハード周期タスク (r5, r6, r7) を実行時間が大きく変動しないのでサーバを介在せずに EDF で直接スケジュールする例である.
 \end{itemize}
 \end{frame}
 
