--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
@@ -11,7 +11,7 @@
 
 \begin{frame}{マルチスレッドエグゼキュータ}
     \begin{itemize}
-        \item ROS は組み込みでマルチスレッドエグゼキュータを提供する
+        \item ROS は組込みでマルチスレッドエグゼキュータを提供する
         \item 共有プロセスで複数のエグゼキュータスレッドを使用すると, 同時実行性の問題が発生する
         \item ROS はこの問題に対処するためにmutually exclusiveコールバックグループを導入し, 同じグループ内のコールバックが同時に実行されないことを保証する
         \item コールバック間のブロッキング関係を処理するために分析を拡張することは, 今後の課題である
