--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
@@ -82,7 +82,7 @@
 
 \begin{frame}{エグゼキュータのスケジューリング}
     \begin{itemize}
-        \item 本論文では, 組み込みのシングルスレッドエグゼキュータを採用する
+        \item 本論文では, 組込みのシングルスレッドエグゼキュータを採用する
         \item 各エグゼキュータが単一の予約サーバに割り当てられ, 各予約サーバが単一のエグゼキュータを処理すると仮定する
         % \item したがって, エグゼキュータに割り当てられたコールバックは, 対応する予約サーバに割り当てられたと見なせる
     \end{itemize}
