--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -5,12 +5,12 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        デフォルトの ROS2 スケジューラおよび最先端の分析作業と比較することにより, 提案された PiCAS フレームワークを評価する
+        デフォルトの ROS 2 スケジューラおよび最先端の分析作業と比較することにより, 提案された PiCAS フレームワークを評価する
     \end{itembox}
     \begin{itembox}[l]{\textbf{流れ}}
         \begin{itemize}
             \item 実際のプラットフォームでケーススタディを実施し, PiCAS の実際の有効性を特定
-            \item ランダムに生成されたワークロードを使用してスケジューリングシミュレーションを行い, PiCAS とデフォルトの ROS2 スケジューラのパフォーマンス特性を調査
+            \item ランダムに生成されたワークロードを使用してスケジューリングシミュレーションを行い, PiCAS とデフォルトの ROS 2 スケジューラのパフォーマンス特性を調査
         \end{itemize}
     \end{itembox}
 \end{frame}
@@ -21,8 +21,8 @@
 
 \begin{frame}{実装の詳細1}
     \begin{itemize}
-        \item 提案されたスケジューラを, 6 コア ARMv8.2 $1.4 \mathrm{GHz}$ プロセッサを搭載した NVIDIA Xavier NX プラットフォームの Ubuntu $18.04$ 上で動作する Eloquent Elusor バージョンの ROS2 に実装した
-        \item ROS2スケジューラは, 独自のコールバックスケジューリングポリシーを備えているため, 本実装では主に以下2つを変更した
+        \item 提案されたスケジューラを, 6 コア ARMv8.2 $1.4 \mathrm{GHz}$ プロセッサを搭載した NVIDIA Xavier NX プラットフォームの Ubuntu $18.04$ 上で動作する Eloquent Elusor バージョンの ROS 2 に実装した
+        \item ROS 2スケジューラは, 独自のコールバックスケジューリングポリシーを備えているため, 本実装では主に以下2つを変更した
               \begin{itemize}
                   \item 実行キューの準備完了コールバックの更新条件
                   \item 個々のコールバックに対する優先度割り当て
@@ -32,7 +32,7 @@
 
 \begin{frame}{実装の詳細2}
     \begin{itemize}
-        \item ROS2 では, エグゼキュータが通信層と対話して, readyコールバックをキューにフェッチする
+        \item ROS 2 では, エグゼキュータが通信層と対話して, readyコールバックをキューにフェッチする
         \item スケジューラはコールバックが完了するたびにキューを更新する
         \item もし 1 つ以上のコールバックがキューに準備されている場合, PiCASは, \hlink{alg1}{提案優先度割り当てアルゴリズム} により決定された最も高い優先度を持つコールバックを選択する
     \end{itemize}
@@ -53,11 +53,11 @@
 
 \begin{frame}{アプローチの比較}
     次の 3 つの手法を比較する
-    \begin{block}{ROS2}
-        分析なしの ROS2 デフォルトスケジューラ
+    \begin{block}{ROS 2}
+        分析なしの ROS 2 デフォルトスケジューラ
     \end{block}
     \begin{block}{ROS2-SD}
-        リソース予約と最悪応答時間分析を備えた ROS2 デフォルトスケジューラ~\cite{casini2019response}
+        リソース予約と最悪応答時間分析を備えた ROS 2 デフォルトスケジューラ~\cite{casini2019response}
         \notes{リソース予約は, Linux システムで SCHED\_DEADLINE ポリシーを使用して実装できる}
     \end{block}
     \begin{block}{ROS2-PiCAS}
@@ -66,7 +66,7 @@
 \end{frame}
 
 \begin{frame}{コールバックの WCET計測方法}
-    組み込みプラットフォームでの 5,000 回の実行から各コールバックの実行時間を測定し, そのコールバックの観測された最大の実行時間を WCET として選択
+    組込みプラットフォームでの 5,000 回の実行から各コールバックの実行時間を測定し, そのコールバックの観測された最大の実行時間を WCET として選択
 \end{frame}
 
 \begin{frame}{ケーススタディ I (ユニプロセッサシステム)}
@@ -82,7 +82,7 @@
     \begin{itemize}
         \item コールバックは固有のバジェットで同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
         \item チェーン $1\left(\Gamma^{1}\right)$ はチェーン $2\left(\Gamma^{2}\right)$ よりも優先度が高いとする
-        \item ROS2PiCAS でのバジェットの影響を評価するために, 2 つのチェーンと同じ周期で実行され, システムで最も高い優先度を持つ定期的なスレッドを作成
+        \item ROS2-PiCAS でのバジェットの影響を評価するために, 2 つのチェーンと同じ周期で実行され, システムで最も高い優先度を持つ定期的なスレッドを作成
               \begin{itemize}
                   \item このスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能なバジェットを制限する
               \end{itemize}
@@ -125,19 +125,19 @@
         \item チェーンのインデックスが小さい程, 高い優先度を持つとする
         \item 最初にチェーン 1 からチェーン 4 をそれぞれ異なる CPU コアに割り当て, 次に負荷分散方式でその他を分散する
         \item 割り当て後の各 CPU コアの利用率は, 平均で $0.97$
-        \item デフォルトの ROS2 スケジューラと以前の研究 [11] では割り当て方式が提供されていないため, ROS2 と ROS2-SD では, 同じノードからコアへの割り当てと, コアごとに 1 つのエグゼキュータを使用する
+        \item デフォルトの ROS 2 スケジューラと以前の研究 [11] では割り当て方式が提供されていないため, ROS 2 と ROS2-SD では, 同じノードからコアへの割り当てと, コアごとに 1 つのエグゼキュータを使用する
         \item ROS2-SD では, 各コアのリソース予約額を $100 \%$ に設定する
     \end{itemize}
 \end{frame}
 
 \begin{frame}[label=latency]{ケーススタディ II 実験環境2}
     実験で観測されたレイテンシは, タイマコールバックの実行開始時刻を記録することで得られたものであり, リリース時刻ではない
-    \notes{ROS2が最初のリリースオフセットを設定するためのサポートを欠いているため}
+    \notes{ROS 2が最初のリリースオフセットを設定するためのサポートを欠いているため}
     \forme{
         \begin{itemize}
             \item しかし, ROS2-PiCASでは, チェーン1--4はそれぞれ異なるCPUコアの最も優先度が高いエグゼキュータに割り当てられているため, その開始時刻とリリース時刻は全く同じである
             \item チェーン5とチェーン6がそれぞれチェーン1とチェーン4と同じCPUコアに割り当てられていても, ROS2-PiCAS下では, それらのエグゼキュータの優先度と周期を考慮すれば, リリース時間ベースのレイテンシを容易に見積もることができる
-            \item しかし, ROS2およびROS2-SDでは, リリース時間ベースのレイテンシを直感的に見積もることができない
+            \item しかし, ROS 2およびROS2-SDでは, リリース時間ベースのレイテンシを直感的に見積もることができない
         \end{itemize}
     }
 \end{frame}
@@ -181,11 +181,11 @@
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
             \item ROS2-PiCAS では, 優先度の高いチェーン 4 がチェーン 6 に複数回干渉する可能性がある
-            \item 対してデフォルト ROS2 スケジューラでは, ノンプリエンプティブコールバック実行および公平性に基づくスケジューリングにより, チェイン 4 とチェイン 6 が互いに 1 回 だけブロックできる
+            \item 対してデフォルト ROS 2 スケジューラでは, ノンプリエンプティブコールバック実行および公平性に基づくスケジューリングにより, チェイン 4 とチェイン 6 が互いに 1 回 だけブロックできる
         \end{itemize}
     \end{block}
     \begin{block}{理由2}
-        ROS2およびROS2-SDにおけるチェーン6の観測レイテンシは, タイマコールバックの開始時刻を用いて得られるため, チェーン4からのブロック時間は含まれない
+        ROS 2およびROS2-SDにおけるチェーン6の観測レイテンシは, タイマコールバックの開始時刻を用いて得られるため, チェーン4からのブロック時間は含まれない
     \end{block}
 \end{frame}
 
@@ -234,7 +234,7 @@
         \item ワークロードセットの利用率を, 4 コア環境の $\{2.5,3.0,3.5\}$ から選択
         \item 利用率ごとにランダムに生成された 1,000 個のワークロードセットを使用
         \item ワークロードセットごとに各5つのコールバックを持つ 9 つのチェーンを使用
-        \item チェーン周期は $[50,1000]$ ms の範囲でランダムに選択され, デッドラインは周期に等しく設定される
+        \item チェーン周期は $[50,1{,}000]$ ms の範囲でランダムに選択され, デッドラインは周期に等しく設定される
         \item 各チェーンの利用率は 1.0 を超えない
         \item 各ワークロードセットの生成後, インデックスの小さいチェーンほど周期が短くなるようにチェーンの順序を変更し, インデックスの小さいチェーンにはより高い優先度を割り当てる
     \end{itemize}
