--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
@@ -3,15 +3,15 @@
 \section{INTRODUCTION}
 \label{sec: introduction}
 
-\begin{frame}{ROS2 アプリケーションのリアルタイム保証が困難な理由}
+\begin{frame}{ROS 2 アプリケーションのリアルタイム保証が困難な理由}
     \begin{enumerate}
         \item アプリケーションはデータ依存関係を持つコールバックのセットで構成されるチェーンを形成するため, システム設計者は, チェーンのエンドツーエンドレイテンシの安全な上界を知る必要がある
-        \item 多くの先行研究がエンドツーエンドチェーンレイテンシの分析手法を提案しているが, それらは ROS2 フレームワークに直接適用できない
+        \item 多くの先行研究がエンドツーエンドチェーンレイテンシの分析手法を提案しているが, それらは ROS 2 フレームワークに直接適用できない
     \end{enumerate}
 \end{frame}
 
-\begin{frame}{ROS2 アプリケーションの分析に関する先行研究}
-    ROS2 スケジューリングアーキテクチャのリアルタイム性を正式に分析した研究は \cite{casini2019response} のみ
+\begin{frame}{ROS 2 アプリケーションの分析に関する先行研究}
+    ROS 2 スケジューリングアーキテクチャのリアルタイム性を正式に分析した研究は \cite{casini2019response} のみ
     \begin{block}{先行研究~\cite{casini2019response}の課題}
         エグゼキュータ内のスケジューリング動作にのみ焦点を当てており, マルチコアシステムのエグゼキュータと CPU コアへのスケジューリングエンティティの割り当ては考慮されていない
     \end{block}
@@ -19,9 +19,9 @@
 
 \begin{frame}{本論文の提案}
     \begin{itemize}
-        \item マルチコア環境における ROS2用 の優先度駆動型チェーン考慮スケジューラである PiCAS を提案
+        \item マルチコア環境における ROS 2用 の優先度駆動型チェーン考慮スケジューラである PiCAS を提案
         \item 目的は, 重要度とタイミングの要件に基づいてチェーンのコールバック実行に優先度を付けることにより, エンドツーエンドのチェーンレイテンシを最小限に抑えること
-        \item ROS2「Eloquent Elusor」バージョンに PiCAS を実装し, 実際の組み込みプラットフォームでそのパフォーマンスを評価する
+        \item ROS 2「Eloquent Elusor」バージョンに PiCAS を実装し, 実際の組込みプラットフォームでそのパフォーマンスを評価する
     \end{itemize}
 \end{frame}
 
