--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/symbols_terms.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/symbols_terms.tex
@@ -37,3 +37,24 @@
         \end{table}
     }
 \end{frame}
+
+\begin{frame}{表記法・用語 3}
+    \full{
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|l|} \hline
+                    $\mathcal{N} $                        & ノードセット                                          \\\hline
+                    $\Gamma^{c}$                          & まだ割り当てられていない最高優先度のチェーン          \\\hline
+                    $\mathbb{N}$ $(U_{\mathbb{N}} \ge 1)$ & チェーン $\Gamma^c$ のコールバックを含むノードセット  \\\hline
+                    $n$ $(n \in \mathbb{N})$              & $\Gamma^c$ の最も低い優先度のコールバックを含むノード \\\hline
+                    $e_e$                                 & 空のエグゼキュータ                                    \\\hline
+                    $e_m$                                 & 空でないエグゼキュータ                                \\\hline
+                    $M$                                   & $e_m$の数                                             \\\hline
+                    $P_k$                                 & CPU コア                                              \\\hline
+                    $U_{P_k}$                             & CPU コア $P_k$ の利用率                               \\\hline
+                    $P$                                   & $P_k$の数                                             \\\hline
+                \end{tabular}
+            }
+        \end{table}
+    }
+\end{frame}
