--- a/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/preliminaries.tex
+++ b/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/preliminaries.tex
@@ -91,7 +91,7 @@
                   \setlength{\linewidth}{0.98\columnwidth}
                   \begin{itemize}
                       \item 研究衛星MISTのオンボードコンピュータは, タイマを提供していない
-                      \item ソフトウェアレベルのタイマを持つには, そのような機能を提供するミドルウェア層が必要であるが, 組み込み型のリアルタイムシステムでは必ずしもそうではない
+                      \item ソフトウェアレベルのタイマを持つには, そのような機能を提供するミドルウェア層が必要であるが, 組込み型のリアルタイムシステムでは必ずしもそうではない
                   \end{itemize}
               \end{block}
     \end{itemize}
