--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/introduction.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/introduction.tex
@@ -41,7 +41,7 @@
 \end{frame}
 
 \begin{frame}{未解決の問題2}
-    ROS 2 は機械学習アルゴリズムを備えたインテリジェントな自律システムの開発に広く使用されているため, GPU や FPGA などの共有ハードウェアアクセラレータから予測できないタイミング動作が発生する可能性があり, これはリソースに制約のある組み込みロボットプラットフォームでは深刻な問題となる
+    ROS 2 は機械学習アルゴリズムを備えたインテリジェントな自律システムの開発に広く使用されているため, GPU や FPGA などの共有ハードウェアアクセラレータから予測できないタイミング動作が発生する可能性があり, これはリソースに制約のある組込みロボットプラットフォームでは深刻な問題となる
 \end{frame}
 
 \begin{frame}{貢献}
