--- a/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/system_model.tex
+++ b/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/system_model.tex
@@ -6,15 +6,15 @@
 \begin{frame}{}
     \fitimage{
         \begin{itemize}
-            \item 初に, ROS2 に関する簡単な背景とシステムモデルのコンテキストを提供する (ROS2 のより詳細な紹介は [6] にある)
-            \item 図 1-(a) に ROS2 のアーキテクチャを示す
+            \item 初に, ROS 2 に関する簡単な背景とシステムモデルのコンテキストを提供する (ROS 2 のより詳細な紹介は [6] にある)
+            \item 図 1-(a) に ROS 2 のアーキテクチャを示す
         \end{itemize}
     }{ROS.png}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS2 アプリケーションは通常, publishsubscribe パラダイムを使用して相互に通信する個々のノードの構成で構成される
+        \item ROS 2 アプリケーションは通常, publishsubscribe パラダイムを使用して相互に通信する個々のノードの構成で構成される
         \item ノードはトピックにメッセージをpublishし, トピックにsubscribeしているノードにメッセージをブロードキャストする
         \item ノードは, コールバックをアクティブにして各メッセージを処理することにより, publish メッセージに反応する
         \item ROS アプリケーションを展開するには, 個々のノードがホストに分散され, オペレーティングシステムプロセスにマッピングされる
@@ -23,8 +23,8 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS2 クライアントライブラリの Executor は, オペレーティングシステムプロセス内のノードのコールバックの実行を調整する
-        \item ROS2 には 2 つの組み込みエグゼキュータが用意されている1 つのスレッドでコールバックを実行するシーケンシャルエグゼキュータと, 保留中のコールバックの処理を複数のスレッドに分散する並列エグゼキュータである
+        \item ROS 2 クライアントライブラリの Executor は, オペレーティングシステムプロセス内のノードのコールバックの実行を調整する
+        \item ROS 2 には 2 つの組込みエグゼキュータが用意されている1 つのスレッドでコールバックを実行するシーケンシャルエグゼキュータと, 保留中のコールバックの処理を複数のスレッドに分散する並列エグゼキュータである
         \item [6] と同様に, 本論文では, ワークロードをシーケンシャルに実行する必要があるシングルスレッドエグゼキュータで実行される処理チェーン (図 1-(b) に示すように) として実装されるアプリケーションを検討する
     \end{itemize}
 \end{frame}
