--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
@@ -264,7 +264,7 @@
 \begin{frame}{結果から分かること}
     \begin{itemize}
         % \item ROS-LlamaのメモリフットプリントはROSのフットプリントと比較してごくわずかであるため, 我々はプロセッサ時間に注目した
-        \item ROS-Llamaは6秒ごとにバジェットを再計算するように設定されており, 全体としてROS-Llamaは1CPUの30--40\% を消費する
+        \item ROS-Llamaは6秒ごとにバジェットを再計算するように設定されており, 全体としてROS-Llamaは1CPUの$30--40 \%$ を消費する
         \item モデル抽出器は, システムとともに継続的に実行され, ROS-Llamaの総コストの約 $60 \%$ を占める
         \item 分析のためにタイミングモデルを準備するコストは, オーバヘッドの約 $15 \%$
         \item 残りの実行時コストは, バジェット選択プロセスによるもので, バジェット編成ヒューリスティック $(\approx 5 \%)$ と応答時間分析 $(\approx 20 \%)$ に分かれている
