--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
@@ -30,7 +30,7 @@
 \begin{frame}{離散時間モデル}
     本論文では離散時間モデルを想定する
     \begin{block}{離散時間モデル}
-        全ての時間パラメーターが基本時間単位 (プロセッササイクルなど) の整数倍
+        全ての時間パラメータが基本時間単位 (プロセッササイクルなど) の整数倍
     \end{block}
 \end{frame}
 
