--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/evaluation.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/evaluation.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        合成DAGセットを生成し, システムモデルのさまざまなパラメーターを変化させて, 提案アルゴリズムの性能を評価する
+        合成DAGセットを生成し, システムモデルのさまざまなパラメータを変化させて, 提案アルゴリズムの性能を評価する
     \end{itembox}
 \end{frame}
 
