--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/federated_scheduling.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/federated_scheduling.tex
@@ -21,7 +21,7 @@
 \label{ssec: Processor Value}
 
 \begin{frame}{事前準備1}
-    「クラスタ $\mathcal{K}_y$ に属す $x$ 番目のプロセッサが, $G^j$に属すタスク $\tau_i$ に $s$ 番目の速度を提供するかどうか」を検出するブール型パラメーター $b_{s,x,y}^{i,j}$ を導入
+    「クラスタ $\mathcal{K}_y$ に属す $x$ 番目のプロセッサが, $G^j$に属すタスク $\tau_i$ に $s$ 番目の速度を提供するかどうか」を検出するブール型パラメータ $b_{s,x,y}^{i,j}$ を導入
     \begin{equation*}
         b_{s, x, y}^{i, j}= \begin{cases}\text { true } & \operatorname{ProcIndex}\left(O_{s, y}^{i, j}\right)=x \\ \text { false } & \text { otherwise }\end{cases}
     \end{equation*}
