--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/related_work.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/related_work.tex
@@ -45,7 +45,7 @@
 
     \begin{frame}{}
         \begin{itemize}
-            \item 別の一般的な適応戦略は, フィードバック制御理論に依存してスケジューリングパラメーターを調整することである
+            \item 別の一般的な適応戦略は, フィードバック制御理論に依存してスケジューリングパラメータを調整することである
             \item 以前の研究では, 期間 $[46,47]$, QoS レベル $[42,45,46,48]$, 予約バジェット $[43,49-54]$ などを直接制御する方法が検討されてきた
             \item このようなアプローチは, 原則としてROSに移すことができるが, そのコンテキストではまだ体系的に研究されていない
             \item ROS-Llama は, フィードバックに基づくリアクティブプロビジョニングではなく, ワークロードの明示的に抽出されたモデルに基づく応答時間分析 [6] に基づく予測プロビジョニングを実現するという点で, これらの従来のアプローチとは異なる
