--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/evaluations.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/evaluations.tex
@@ -10,7 +10,7 @@
 \begin{frame}{DAGの生成方法}
     \begin{itemize}
         \item 各 DAG は, エッジで接続された 2 つの頂点から生成される
-        \item 再帰手順が確率的に実行され, 次のパラメーターを使用して頂点を並列サブグラフに展開する
+        \item 再帰手順が確率的に実行され, 次のパラメータを使用して頂点を並列サブグラフに展開する
               \begin{itemize}
                   \item  $p_{p a r}$ : 頂点を並列サブグラフに拡張する確率
 
