--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/system_model.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/system_model.tex
@@ -15,7 +15,7 @@
 
 \begin{frame}{タスクセットの定義1}
     \begin{itemize}
-        \item $N$ 個の散発的なタスク $\left\{\tau_{1}, \tau_{2}, \ldots, \tau_{N}\right\}$ が $M$ 個の同質プロセッサにスケジュールされているタスクセットを考える
+        \item $N$ 個の散発的なタスク $\left\{\tau_{1}, \tau_{2}, \ldots, \tau_{N}\right\}$ が $M$ 個のホモジニアスプロセッサにスケジュールされているタスクセットを考える
         \item 各タスク $\tau_{i}$ は, ジョブの無限シーケンスをリリースする
         \item $\tau_{i}$ の $T_{i}$ の周期は, $\tau_{i}$ の 2 つの連続するジョブのリリース時刻の間の最小間隔
         \item 各タスク $\tau_{i}$ には相対デッドライン $D_{i}$ がある
@@ -38,7 +38,7 @@
 \begin{frame}{アプローチに必要な情報}
     \begin{itemize}
         \item 各ジョブのワークロードは DAG によってモデル化できると想定するが, 実際にはジョブの正確な DAG 構造を知る必要はない
-        \item ボリューム $C_{i}$ とクリティカルパス長 $L_{i}$ の 2 つのパラメーターに関する制約を満たすタスクのジョブのみが必要
+        \item ボリューム $C_{i}$ とクリティカルパス長 $L_{i}$ の 2 つのパラメータに関する制約を満たすタスクのジョブのみが必要
     \end{itemize}
 \end{frame}
 
