--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -39,7 +39,7 @@
 
 \begin{frame}{システム $\Gamma$ の生成方法3}
     \begin{itemize}
-        \item mutually exclusiveグループの数 $\left|\bigcup_{\forall \mathcal{C}_{i} \in \Gamma} \theta_{i}\right|$ は, $g$ をパラメーターとして $[0, g]$ の範囲内でランダムに選択される
+        \item mutually exclusiveグループの数 $\left|\bigcup_{\forall \mathcal{C}_{i} \in \Gamma} \theta_{i}\right|$ は, $g$ をパラメータとして $[0, g]$ の範囲内でランダムに選択される
         \item mutually exclusiveグループ内のコールバックの総数は, $\alpha$ が $[0.1,1]$ に収まる比率である $\alpha \sum_{i=1}^{|\Gamma|}\left|\mathcal{C}_{i}\right|$ によって決定される
         \item mutually exclusive コールバックグループのコールバックは, 全てのコールバックからランダムに選択され, 各コールバックグループに分配される
         \item 残りのコールバックは全てreentrantコールバックグループに割り当てられる
@@ -75,7 +75,7 @@
 \end{frame}
 
 \begin{frame}{実験方法}
-    以下を基本設定とし, 実験の各グループで 1 つのパラメーターを変更し, 他のパラメーターは変更しない
+    以下を基本設定とし, 実験の各グループで 1 つのパラメータを変更し, 他のパラメータは変更しない
     \begin{itemize}
         \item $m=4$
         \item $n=8$
