--- a/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
+++ b/paper/x_2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
@@ -50,7 +50,7 @@
     \begin{itemize}
         \item 本論文の最初の貢献は, ROS 2 エグゼキュータ上でチェーンを処理するための新しい応答時間分析技術を開発することによって, [6] の上記の問題に対処することである
         \item 本論文の新しい分析手法は, ROS 2 エグゼキュータのスケジューリング動作に関する深い洞察を調査することで, 分析精度を大幅に向上させます
-        \item ランダムに生成されたワークロードを使用した経験的評価では, 新しい最悪応答時間が, さまざまなパラメーター設定の下で大幅なマージンを持って [6] よりも一貫して優れていることが示されている
+        \item ランダムに生成されたワークロードを使用した経験的評価では, 新しい最悪応答時間が, さまざまなパラメータ設定の下で大幅なマージンを持って [6] よりも一貫して優れていることが示されている
     \end{itemize}
 \end{frame}
 
