--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
@@ -30,7 +30,7 @@
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
-    \scriptsize\tableofcontents[hideallsubsections]
+    \tiny\tableofcontents[hideallsubsections]
 \end{frame}
 
 \input{prior_knowledge.tex}
