--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
@@ -42,7 +42,7 @@
             \item したがって, 一般的には, パッシブ VP よりもアクティブ VP を介して処理能力を提供する方が適切である
             \item 多くの「小さな」アクティブ VP を構築すると, これらのプロセッサに残っている大量の処理能力をパッシブ VP として非効率的に使用する必要がある
                   }
-            \item したがって, \hlink{thorem1}{Theorem 1} の条件が満たされる限り, 可能な限り大きなアクティブ VP を作成し, アクティブ VP グループ内のアクティブ VP の数を最小限に抑えることを選択する
+            \item したがって, \hlink{theorem1}{Theorem 1} の条件が満たされる限り, 可能な限り大きなアクティブ VP を作成し, アクティブ VP グループ内のアクティブ VP の数を最小限に抑えることを選択する
         \end{itemize}
     \end{frame}
 
@@ -96,7 +96,7 @@
 \end{frame}
 
 \begin{frame}{パッシブVPが有用である条件}
-    \hlink{thorem2}{Theorem 2} と \hlink{thorem3}{Theorem 3} の条件より, パッシブ VP $\pi_{x}$ によって提供される処理能力がタスク $\tau_{j}$ にとって有用であるのは, 以下の場合である
+    \hlink{theorem2}{Theorem 2} と \hlink{theorem3}{Theorem 3} の条件より, パッシブ VP $\pi_{x}$ によって提供される処理能力がタスク $\tau_{j}$ にとって有用であるのは, 以下の場合である
     \notes{有用である：スケジュール可能になりうる}
     \begin{equation*}
         \operatorname{sbf}_{\pi_{x}}\left(D_{j}\right)>L_{j}
@@ -104,8 +104,8 @@
 
 \end{frame}
 
-\begin{frame}[label=lemma6]{Lemma 6}
-    \hlink{lemma6}{Lemma 4} は対のパッシブVPが $\tau_j$ に有用であるための必要条件は $D_{i}-L_{i}<D_{j}-L_{j}$ であることを示す
+\begin{frame}[label=lemma6]{Lemma 2}
+    Lemma 2 は対のパッシブVPが $\tau_j$ に有用であるための必要条件は $D_{i}-L_{i}<D_{j}-L_{j}$ であることを示す
     \begin{lemma}[]
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
@@ -119,7 +119,7 @@
 \end{frame}
 
 \begin{frame}{アクティブ/パッシブVPの選択戦略}
-    \hlink{lemma6}{Lemma 4} より, 割り当てヒューリスティックは, 小さい $D_{i}-L_{i}$ を持つタスクを選択してアクティブ VP で実行し, 大きい $D_{i}-L_{i}$ を持つタスクをパッシブ VP で実行するようにする
+    \hlink{lemma6}{Lemma 2} より, 割り当てヒューリスティックは, 小さい $D_{i}-L_{i}$ を持つタスクを選択してアクティブ VP で実行し, 大きい $D_{i}-L_{i}$ を持つタスクをパッシブ VP で実行するようにする
 \end{frame}
 
 \forme{
